--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
@@ -19,6 +20,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
     "nodemon": "^3.1.0",
